<resources>
    <string name="app_name">ShanePrototype</string>
    <string name="action_settings">Settings</string>
    <string name="musicSearchPrototype">Music Search Prototype</string>
    <string name="fileScanProtype">File Scan Prototype</string>
    <string name="flikrSharkProtype">Flikr Shark Prototype</string>
    <string name="wordSearchGamePrototype">Word Search Game Prototype</string>
    <string name="socketChatPrototype">Socket Chat Prototype</string>
    <string name="inAppGmailPrototype">In App Gmail Prototype</string>
    <string name="dfuPrototype">DFU Prototype</string>
    <string name="rxAndroidPrototype">RX Android Prototype</string>
    <string name="paintCodeRobot">Paint Code Robot</string>
    <string name="SoundMeterPrototype">Sound Meter Prototype</string>
    <string name="KotlinFunPrototype">Kotlin Fun Prototype</string>

    <string name="title_key">title: </string>
    <string name="artist_key">artist: </string>
    <string name="album_key">album: </string>

    <string name="title_hint">enter title</string>
    <string name="artist_hint">enter artist</string>
    <string name="album_hint">enter album</string>

    <string name="save">save</string>

    <string name="music_provider_authorities">com.shanefrankly.content.provider</string>

    <string name="startScan">Start Scanning</string>
    <string name="displayTop10LargestFiles">Display top 10 largest Files</string>
    <string name="displayTop5FrequentFiles">Display top 5 Frequent Files</string>
    <string name="everageFileSize">Everage file size:</string>
    <string name="fileName">file name: </string>
    <string name="fileSize">file size: </string>
    <string name="fileFrequency">file frequency: </string>
    <string name="fileExtension">file extension: </string>
    <string name="search_movie">search movie</string>
    <string name="start_search">start search</string>

    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="username">User Name: </string>
    <string name="image_downloading_inprogress_error">Image is in downloading progress, please wait till it finish.</string>
    <string name="image_saved_to_camera">Image saved to cameras.</string>
    <string name="network_error_message">Network error, please try again.</string>
    <string name="errorTitle">Error!</string>
    <string name="generalErrorMessage">Oops, something goes wrong, pull to refresh again.</string>
    <string name="startRecording">Start Recording</string>

    <string name="sourceWord">Word: </string>
    <string name="showHint">Show Hint</string>
    <string name="congratulations">Congratulations, you completed the game</string>
    <string name="next_level">next level</string>


    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <string name="title_activity_login">Join</string>

    <!-- Strings related to login -->
    <string name="prompt_username">What\'s your nickname?</string>
    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Join</string>

    <string name="error_field_required">This field is required</string>
</resources>
