<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prototype.shane.shaneprototype.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/buttonMusicSearchPrototype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musicSearchPrototype"/>

    <Button
        android:id="@+id/buttonSDFileScanPrototype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileScanProtype"/>

    <Button
        android:id="@+id/buttonFlickrSharkPrototype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flikrSharkProtype"/>

    <Button
        android:id="@+id/buttonWordSearchGamePrototype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wordSearchGamePrototype"/>


</LinearLayout>
