<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rudolfmacy.shane.sdfilescanner.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textViewEverageFileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/buttonLargestFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/displayTop10LargestFiles"/>

    <Button
        android:id="@+id/buttonMostFrequentFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/displayTop5FrequentFiles"/>

    <Button
        android:id="@+id/buttonStartScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startScan" />

</LinearLayout>
